--- a/layout/index.html
+++ b/layout/index.html
@@ -6,51 +6,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/bootstapcss/cdn.jsdelivr.net_npm_bootstrap@5.1.3_dist_css_bootstrap.min.css">
-    <script src="../css/bootstrapjs/cdn.jsdelivr.net_npm_bootstrap@5.1.3_dist_js_bootstrap.bundle.min.js"></script>
+    
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script><script src="../css/bootstrapjs/cdn.jsdelivr.net_npm_bootstrap@5.1.3_dist_js_bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <Header>
+        <nav class="navbar navbar-expand-lg navbar-light  d-flex flex-column pb-0 ">
+            <div class="container-fluid container-lg mb-2 mb-lg-0 " style="width: 80%;">
+               
+                    <div class="col-lg-3">
+                        <a class="navbar-brand flex justify-content-center" href="#">Navbar</a>
+                    </div>    
+                    
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+    
+    
+                    <div class="col-lg-6 d-none d-lg-block">
+                        <div class="input-group ">
+                            <input type="text" class="form-control" placeholder="Tìm kiếm" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                            <span class="input-group-text" id="basic-addon2">Search</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-xl-2 d-none d-lg-block">
+                        <div class="d-flex justify-content-around">
+                            <div class="fw-light text-sm">
+                                <p class="fs-6">Hotline</p>
+                                <p class="fs-6">09162151...</p>
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <p>Giỏ Hàng</p>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+    
+            <div class="border-bottom" style="width: 100%;">
+                <div class="container d-flex " style="width: 80%;">
+                    <div class="border border-2 col-lg-4 col-xl-3 border-top-0 border-bottom-0 bg-warning pt-3   d-none d-lg-block">
+                        <p class="text-center" >Danh Mục Sản Phẩm</p>
+                    </div>
+                    <div class="collapse navbar-collapse col-lg-8 ms-lg-4 " id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Giới thiệu</a>
+                          </li>
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Trang trí nhà cửa
+                            </a>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">Action</a></li>
+                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link " aria-disabled="true">Tin tức</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link " aria-disabled="true">Dự án</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link " aria-disabled="true">Liên hệ</a>
+                          </li>
                         </ul>
+                       
+                      </div>
+                </div>
+            </div>
+        </nav>
+    </Header>
+
+    <article class="container" style="width: 80%;">
+        <div class="row" style="width: 100%;">
+            <div class="col-lg-4 col-xl-3 ">
+                <ul class="border border p-2" style="list-style: none;">
+                    <li>
+                        <div class="d-flex justify-content-between">
+                            <p>Ghế ngồi đau lưng vcl</p>
+                            <ion-icon name="caret-forward-outline"/>
+                        </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                    <li>
+                        <div class="d-flex justify-content-between">
+                            <p>Ghế ngồi đau lưng vcl</p>
+                            <ion-icon name="caret-forward-outline"/>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="d-flex justify-content-between">
+                            <p>Ghế ngồi đau lưng vcl</p>
+                            <ion-icon name="caret-forward-outline"/>
+                        </div>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
-    </nav>
+    </article>
 </body>
 
 </html>
